==> gartnerd/retrobsd/sys/pic32/machdep.c <==
#include <sys/param.h>
#include <sys/dir.h>
#include <sys/inode.h>
#include <sys/user.h>
#include <sys/proc.h>
#include <sys/fs.h>
#include <sys/map.h>
#include <sys/buf.h>
#include <sys/file.h>
#include <sys/clist.h>
#include <sys/callout.h>
#include <sys/reboot.h>
#include <sys/msgbuf.h>
#include <sys/namei.h>
#include <sys/mount.h>
#include <sys/systm.h> 		/* bzero() */
#include <sys/kconfig.h>
#include <sys/tty.h>
#include <machine/uart.h>
#include <machine/usb_uart.h>
#   include <machine/usb_device.h>
#   include <machine/usb_function_cdc.h>
#define LED_TTY_ON()        LAT_CLR(LED_TTY_PORT) = 1 << LED_TTY_PIN
#define LED_TTY_OFF()       LAT_SET(LED_TTY_PORT) = 1 << LED_TTY_PIN
#define LED_TTY_ON()        LAT_SET(LED_TTY_PORT) = 1 << LED_TTY_PIN
#define LED_TTY_OFF()       LAT_CLR(LED_TTY_PORT) = 1 << LED_TTY_PIN
#define LED_DISK_ON()       LAT_CLR(LED_DISK_PORT) = 1 << LED_DISK_PIN
#define LED_DISK_OFF()      LAT_SET(LED_DISK_PORT) = 1 << LED_DISK_PIN
#define LED_DISK_ON()       LAT_SET(LED_DISK_PORT) = 1 << LED_DISK_PIN
#define LED_DISK_OFF()      LAT_CLR(LED_DISK_PORT) = 1 << LED_DISK_PIN
#define LED_KERNEL_ON()     LAT_CLR(LED_KERNEL_PORT) = 1 << LED_KERNEL_PIN
#define LED_KERNEL_OFF()    LAT_SET(LED_KERNEL_PORT) = 1 << LED_KERNEL_PIN
#define LED_KERNEL_ON()     LAT_SET(LED_KERNEL_PORT) = 1 << LED_KERNEL_PIN
#define LED_KERNEL_OFF()    LAT_CLR(LED_KERNEL_PORT) = 1 << LED_KERNEL_PIN
#define LED_SWAP_ON()       LAT_CLR(LED_SWAP_PORT) = 1 << LED_SWAP_PIN

void
startup()
{
    extern void _etext(), _exception_base_();
    extern unsigned __data_start;

    /* Initialize STATUS register: master interrupt disable.
     * Setup interrupt vector base. */
    mips_write_c0_register(C0_STATUS, 0, ST_CU0 | ST_BEV);
    mips_write_c0_register(C0_EBASE, 1, _exception_base_);
    mips_write_c0_register(C0_STATUS, 0, ST_CU0);

    /* Set vector spacing: not used really, but must be nonzero. */
    mips_write_c0_register(C0_INTCTL, 1, 32);

    /* Clear CAUSE register: use special interrupt vector 0x200. */
    mips_write_c0_register(C0_CAUSE, 0, CA_IV);

    /* Setup memory. */
    BMXPUPBA = 512 << 10;               /* Kernel Flash memory size */
#ifdef KERNEL_EXECUTABLE_RAM
    /*
     * Set boundry for kernel executable ram on smallest
     * 2k boundry required to allow the keram segment to fit.
     * This means that there is possibly some u0area ramspace that
     * is executable, but as it is isolated from userspace this
     * should be ok, given the apparent goals of this project.
     */
    extern void _keram_start(), _keram_end();
    unsigned keram_size = (((char*)&_keram_end-(char*)&_keram_start+(2<<10))/(2<<10)*(2<<10));
    BMXDKPBA = ((32<<10)-keram_size);   /* Kernel RAM size */
    BMXDUDBA = BMXDKPBA+(keram_size);   /* Executable RAM in kernel */
#else
    BMXDKPBA = 32 << 10;                /* Kernel RAM size */
    BMXDUDBA = BMXDKPBA;                /* Zero executable RAM in kernel */
#endif
    BMXDUPBA = BMXDUDBA;                /* All user RAM is executable */

    /*
     * Setup interrupt controller.
     */
    INTCON = 0;                         /* Interrupt Control */
    IPTMR = 0;                          /* Temporal Proximity Timer */

    /* Interrupt Flag Status */
    IFS(0) = PIC32_IPC_IP0(2) | PIC32_IPC_IP1(1) |
             PIC32_IPC_IP2(1) | PIC32_IPC_IP3(1) |
             PIC32_IPC_IS0(0) | PIC32_IPC_IS1(0) |
             PIC32_IPC_IS2(0) | PIC32_IPC_IS3(0) ;
    IFS(1) = 0;
    IFS(2) = 0;

    /* Interrupt Enable Control */
    IEC(0) = 0;
    IEC(1) = 0;
    IEC(2) = 0;

    /* Interrupt Priority Control */
    unsigned ipc = PIC32_IPC_IP0(1) | PIC32_IPC_IP1(1) |
                   PIC32_IPC_IP2(1) | PIC32_IPC_IP3(1) |
                   PIC32_IPC_IS0(0) | PIC32_IPC_IS1(0) |
                   PIC32_IPC_IS2(0) | PIC32_IPC_IS3(0) ;
    IPC(0) = ipc;
    IPC(1) = ipc;
    IPC(2) = ipc;
    IPC(3) = ipc;
    IPC(4) = ipc;
    IPC(5) = ipc;
    IPC(6) = ipc;
    IPC(7) = ipc;
    IPC(8) = ipc;
    IPC(9) = ipc;
    IPC(10) = ipc;
    IPC(11) = ipc;
    IPC(12) = ipc;

    /*
     * Setup wait states.
     */
    CHECON = 2;
    BMXCONCLR = 0x40;
    CHECONSET = 0x30;

    /* Disable JTAG port, to use it for i/o. */
    DDPCON = 0;

    /* Use all B ports as digital. */
    AD1PCFG = ~0;

    /* Config register: enable kseg0 caching. */
    mips_write_c0_register(C0_CONFIG, 0,
    mips_read_c0_register(C0_CONFIG, 0) | 3);

    /* Kernel mode, interrupts disabled.  */
    mips_write_c0_register(C0_STATUS, 0, ST_CU0);
    mips_ehb();

    /*
     * Configure LED pins.
     */
#ifdef LED_TTY_PORT                     /* Terminal i/o */
    LED_TTY_OFF();
    TRIS_CLR(LED_TTY_PORT) = 1 << LED_TTY_PIN;
#endif
#ifdef LED_DISK_PORT                    /* Disk i/o */
    LED_DISK_OFF();
    TRIS_CLR(LED_DISK_PORT) = 1 << LED_DISK_PIN;
#endif
#ifdef LED_KERNEL_PORT                  /* Kernel activity */
    LED_KERNEL_OFF();
    TRIS_CLR(LED_KERNEL_PORT) = 1 << LED_KERNEL_PIN;
#endif
#ifdef LED_SWAP_PORT                    /* Auxiliary */
    LED_SWAP_OFF();
    TRIS_CLR(LED_SWAP_PORT) = 1 << LED_SWAP_PIN;
#endif
#ifdef GPIO_CLEAR_PORT                  /* Clear pin */
    LAT_CLR(GPIO_CLEAR_PORT) = 1 << GPIO_CLEAR_PIN;
    TRIS_CLR(GPIO_CLEAR_PORT) = 1 << GPIO_CLEAR_PIN;
#endif
#ifdef POWER_ENABLED  /* Doesn't seem to get called for Olimex board */
    power_init(); 
#endif

    //SETVAL(0);

    /* Initialize .data + .bss segments by zeroes. */
    bzero(&__data_start, KERNEL_DATA_SIZE - 96);

#if __MPLABX__
    /* Microchip C32 compiler generates a .dinit table with
     * initialization values for .data segment. */
    extern const unsigned _dinit_addr[];
    unsigned const *dinit = &_dinit_addr[0];
    for (;;) {
        char *dst = (char*) (*dinit++);
        if (dst == 0)
            break;

        unsigned nbytes = *dinit++;
        unsigned fmt = *dinit++;
        if (fmt == 0) {                 /* Clear */
            do {
                *dst++ = 0;
            } while (--nbytes > 0);
        } else {                        /* Copy */
            char *src = (char*) dinit;
            do {
                *dst++ = *src++;
            } while (--nbytes > 0);
            dinit = (unsigned*) ((unsigned) (src + 3) & ~3);
        }
    }
#else
    /* Copy the .data image from flash to ram.
     * Linker places it at the end of .text segment. */
    extern unsigned _edata;
    unsigned *src = (unsigned*) &_etext;
    unsigned *dest = &__data_start;
    unsigned *limit = &_edata;
    while (dest < limit) {
        /*printf("copy %08x from (%08x) to (%08x)\n", *src, src, dest);*/
        *dest++ = *src++;
    }

#ifdef KERNEL_EXECUTABLE_RAM
    /* Copy code that must run out of ram (due to timing restrictions)
     * from flash to the executable section of kernel ram.
     * This was added to support swap on sdram */

    extern void _ramfunc_image_begin();
    extern void _ramfunc_begin();
    extern void _ramfunc_end();

    unsigned *src1 = (unsigned*) &_ramfunc_image_begin;
    unsigned *dest1 = (unsigned*)&_ramfunc_begin;
    unsigned *limit1 = (unsigned*)&_ramfunc_end;
    /*printf("copy from (%08x) to (%08x)\n", src1, dest1);*/
    while (dest1 < limit1) {
        *dest1++ = *src1++;
    }
#endif
#endif /* __MPLABX__ */

    /*
     * Setup peripheral bus clock divisor.
     */
    unsigned osccon = OSCCON & ~PIC32_OSCCON_PBDIV_MASK;
#if BUS_DIV == 1
    osccon |= PIC32_OSCCON_PBDIV_1;
#elif BUS_DIV == 2
    osccon |= PIC32_OSCCON_PBDIV_2;
#elif BUS_DIV == 4
    osccon |= PIC32_OSCCON_PBDIV_4;
#elif BUS_DIV == 8
    osccon |= PIC32_OSCCON_PBDIV_8;
#else
#error Incorrect BUS_DIV value!
#endif
    /* Unlock access to OSCCON register */
    SYSKEY = 0;
    SYSKEY = 0xaa996655;
    SYSKEY = 0x556699aa;

    OSCCON = osccon;

    /*
     * Early setup for console devices.
     */
#if CONS_MAJOR == UART_MAJOR
    uartinit(CONS_MINOR);
#endif
#if CONS_MAJOR == UARTUSB_MAJOR
    usbinit();
#endif

    /* Get total RAM size. */
    physmem = BMXDRMSZ;

    /*
     * When button 1 is pressed - boot to single user mode.
     */
    boothowto = 0;
    if (button1_pressed()) {
        boothowto |= RB_SINGLE;
    }
}

static void cpuidentify()
{
    unsigned devid = DEVID, osccon = OSCCON;
    static const char pllmult[]  = { 15, 16, 17, 18, 19, 20, 21, 24 };
    static const char plldiv[]   = { 1, 2, 3, 4, 5, 6, 10, 12 };
    static const char *poscmod[] = { "external", "XT crystal",
                                     "HS crystal", "(disabled)" };

    printf("cpu: ");
    switch (devid & 0x0fffffff) {
    case 0x04307053:
        cpu_pins = 100;
        printf("795F512L");
        break;
    case 0x0430E053:
        cpu_pins = 64;
        printf("795F512H");
        break;
    case 0x04341053:
        cpu_pins = 100;
        printf("695F512L");
        break;
    case 0x04325053:
        cpu_pins = 64;
        printf("695F512H");
        break;
    default:
        /* Assume 100-pin package. */
        cpu_pins = 100;
        printf("DevID %08x", devid);
    }
    printf(" %u MHz, bus %u MHz\n", CPU_KHZ/1000, BUS_KHZ/1000);

    /* COSC: current oscillator selection bits */
    printf("oscillator: ");
    switch (osccon >> 12 & 7) {
    case 0:
        printf("internal Fast RC\n");
        break;
    case 1:
        printf("internal Fast RC, PLL div 1:%d mult x%d\n",
            plldiv [DEVCFG2 & 7], pllmult [osccon >> 16 & 7]);
        break;
    case 2:
        printf("%s\n", poscmod [DEVCFG1 >> 8 & 3]);
        break;
    case 3:
        printf("%s, PLL div 1:%d mult x%d\n",
            poscmod [DEVCFG1 >> 8 & 3],
            plldiv [DEVCFG2 & 7], pllmult [osccon >> 16 & 7]);
        break;
    case 4:
        printf("secondary\n");
        break;
    case 5:
        printf("internal Low-Power RC\n");
        break;
    case 6:
        printf("internal Fast RC, divided 1:16\n");
        break;
    case 7:
        printf("internal Fast RC, divided\n");
        break;
    }
}
